--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web3-backend",
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./index.js"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
